# ISD2

./: .codecov.yml  .coverage  .coveragerc  .gitlab-ci.yml  Jenkinsfile  README.md  app.py  appointment-test.py  appointment.py  appointment_test.py  appointments.db  auto.html  carrer.html  codecov.yml  config.py  coverage.xml  database.py  docker-compose.test.yml  franch.html  index.html  login-test.py  login.py  mail.py  offers.html  package-lock.json  pyproject.toml  requirements-dev.txt  run.py  run_tests.py  setup.cfg  setup_ci.py  store.html  tires.html
.github/workflows/: python-app.yml  python-tests.yml
appointments/: add.py  delete.py  get.py  get_by_id.py  get_current.py  search.py  select.py  update.py
auth/: login.py  logout.py  routes.py  signup.py  status.py
github/workflows/: pyhton-tests.yml
pages/: appointment_page.py  login_page.py  signup_page.py  templates.py  update_appointment_page.py  view_appointment_page.py
routes/: appointment_routes.py  auth_routes.py  template_routes.py
templates/: 404.html  appointment.html  index.html  login.html  signup.html  updateAppointment.html  viewAppointment.html
tests/: conftest.py  tes_templates_routes.py  test_500_fixes.py  test_app_content.py  test_app_remaining.py  test_app_specific.py  test_appointment.py  test_appointments_routes.py  test_auth.py  test_auth_routes.py  test_database.py  test_diagnostics.py  test_direct_import.py  test_integration.py  test_main_app.py  test_missing_coverage.py  test_pages.py  test_utils.py
utils/: database.py  helper.py
